# ribbit_bits

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: bit_duration.rs  bit_name.rs  lib.rs  message.rs
